--- a/app/javascript/src/translations/en.json
+++ b/app/javascript/src/translations/en.json
@@ -20,5 +20,9 @@
   "firstName": "First name",
   "lastName": "Last name",
   "confirmPassword": "Confirm password",
-  "alreadyHaveAccount": "Already have an account?"
+  "alreadyHaveAccount": "Already have an account?",
+  "pageNotFound": {
+    "title": "The page you're looking for can't be found",
+    "label": "Back to home"
+  }
 }
